--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.32.1/react-bootstrap.min.js"></script>
     <!-- <script src="https://unpkg.com/react-form-with-constraints/dist/react-form-with-constraints.production.min.js"></script> -->
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
     <script>
     var Alert = ReactBootstrap.Alert;
     </script>
